Give (item / button) made responsive when menu is collapsed, fix styling menu in profiles where is no Give and change date range picker styling (responsive)

--- a/src/themes/default/styles/component.nav.css
+++ b/src/themes/default/styles/component.nav.css
@@ -97,7 +97,7 @@
 				position: absolute;
 				right: calc($unit * 7);
 				left: calc($unit * 7);
-				top: calc($unit * 4);
+				top: calc($unit * 3);
 
 				display: flex;
 				justify-content: center;
